# tock-cheri

./: Cargo.toml  cheri_tock_recipe.md  rust-toolchain.toml
arch/cheri/: Cargo.toml
arch/cheri/src/: cheri_mpu.rs  lib.rs
arch/cortex-m/src/: mpu.rs
arch/riscv/: Cargo.toml
arch/riscv/src/: lib.rs  plic.rs  pmp.rs  support.rs  syscall.rs
arch/rv32i/src/: epmp.rs  lib.rs  machine_timer.rs
boards/: Makefile.common  build.rs  kernel_layout.ld
boards/acd52832/src/: main.rs
boards/arty_e21/src/: main.rs
boards/clue_nrf52840/src/: main.rs
boards/components/: Cargo.toml
boards/components/src/: alarm.rs  console.rs  debug_writer.rs  lib.rs  lldb.rs
boards/esp32-c3-devkitM-1/src/: main.rs
boards/hail/src/: main.rs
boards/hifive1/src/: main.rs
boards/imix/src/: main.rs
boards/imxrt1050-evkb/src/: main.rs
boards/microbit_v2/src/: main.rs
boards/qemu_cheri_virt/: Cargo.toml  Makefile  layout.ld
boards/qemu_cheri_virt/src/: main.rs
capsules/: Cargo.toml
capsules/core/: Cargo.toml
capsules/examples/: traitobj_list.rs
capsules/extra/: Cargo.toml
capsules/src/: alarm.rs  console.rs  console_zero.rs  driver.rs  dyn_proc_loader.rs  kv_store.rs  lib.rs  virtual_adc.rs  virtual_aes_ccm.rs  virtual_alarm.rs  virtual_digest.rs  virtual_flash.rs  virtual_hmac.rs  virtual_i2c.rs  virtual_pwm.rs  virtual_rng.rs  virtual_sha.rs  virtual_spi.rs  virtual_timer.rs  virtual_uart.rs  virtual_uart_zero.rs
capsules/system/: Cargo.toml
chips/sifive/: Cargo.toml
chips/uarts/: Cargo.toml
chips/uarts/src/: lib.rs  ns16550.rs  primecell.rs  uart.rs  uart_zero.rs
kernel/: Cargo.toml
kernel/src/: capabilities.rs  cheri.rs  component.rs  config.rs  const_component.rs  debug.rs  deferred_call.rs  dynamic_deferred_call.rs  easm.rs  errorcode.rs  grant.rs  introspection.rs  kernel.rs  lib.rs  memop.rs  metaptr.rs  polyfill.rs  process.rs  process_binary.rs  process_loading.rs  process_printer.rs  process_standard.rs  process_utilities.rs  processbuffer.rs  syscall.rs  syscall_driver.rs  upcall.rs
libraries/misc/: Cargo.toml
libraries/misc/src/: const_env.rs  default_array.rs  divorce.rs  lib.rs  misc_macros.rs  never.rs  overload_impl.rs  potatoes.rs  take_borrow.rs  tpanic.rs  trait_alias.rs  unsigned_allocators.rs
tools/: run_cargo_fmt.sh
(+94 files in other folders)
